--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,9 @@
 {
+  "menu": {
+    "works": "works",
+    "trajectory": "trajectory",
+    "contact": "contact"
+  },
   "home": {
     "title": "About Me",
     "paragraphs": [
